# vim-driver

./: Cargo.toml  build.rs  config.json  output
include/: libvim.rs
src/: .main.rs.rustfmt  bindings.rs  lib.rs  main.rs
